# QUADRAQ-TGDK

./: CMakeLists.txt  CMakeSettings.json  QUADRAQ (2).cpp  README.md
AI_Backends/: KerflumpInterceptor.hpp  KerfumplInterceptor.cpp  MaraAI.cpp  MaraAI.hpp  MyCustomAI.cpp  MyCustomAI.hpp  OliviaAI.cpp  OliviaAI.hpp  RaLayer.cpp  ShodanAI.cpp  ShodanAI.hpp  TaraAI.cpp
MaraAI/: CMakeLists.txt
RaLayer/: CMakeLists.txt
ShodanAI/: CMakeLists.txt
TaraAI/: CMakeLists.txt
engine/: AIRegistry.cpp  ConsoleAI.cpp  EntropyPredictor.cpp  FlatDDSInterceptor.cpp  QUADRAQ.cpp  QUADRAQ.hpp  QUADRAQ_CLI.cpp  QuantumDrawRouter.cpp  ShaderOverrideUnit.cpp  TGDK_IAIBackend.cpp
include/: AIRegistry.hpp  ConsoleAI.hpp  EntropyPredictor.hpp  FlatDDSInterceptor.hpp  QUADRAQ.hpp  QUADRAQ_CLI.hpp  QuantumDrawRouter.hpp  ShaderOverrideUnit.hpp  TGDK_IAIBackend.hpp
src/: ShaderOverrideUnit.cpp
